# real-time-data-pipelines-in-python

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  quix.yaml
dashboard/: .env.sample  Dockerfile  Makefile  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
dashboard/src/: backend.py  plot.py
dashboard/src/feature_store_api/: __init__.py  api.py  types.py
demo_producer/: app.yaml  main.py  requirements.txt
ohlc_to_feature_store/: Dockerfile  Makefile  app.yaml  main.py  pyproject.toml  requirements.txt
ohlc_to_feature_store/src/: app_factory.py  config.py  main.py  utils.py
ohlc_to_feature_store/src/feature_store_api/: api.py  types.py
trade_producer/: .env.sample  Dockerfile  README.md  app.yaml  logging.yaml  main.py  pyproject.toml  requirements.txt
trade_producer/src/: config.py  main.py  main_quix_platform.py  producer_wrapper.py  utils.py
trade_producer/src/kraken_api/: api.py  types.py
trade_to_ohlc/: Makefile  app.yaml  pyproject.toml  quixstreams-2.2.0a0-py3-none-any.whl  requirements.txt
trade_to_ohlc/src/: app_factory.py  config.py  main.py
