[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Paulescu <plabartabajo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.30.0"
pandas = "^2.1.4"
plotly = "^5.18.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
bokeh = "2.4.3"
hopsworks = "3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
